<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Wireless Robot Controller</string>

    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving app. </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select device</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!--WIFI PART STRINGS-->
    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>

    <string name="settings">Connection settings</string>
    <string name="settings_bluetooth">Select device</string>

    <string name="ip_setting_label">Address</string>
    <string name="port_camera_setting_label">Camera port</string>
    <string name="port_tcp_setting_label">TCP port</string>
    <string name="command_setting_label">Command</string>

    <string name="address_dot">.</string>
    <string name="port_80">80</string>
    <string name="port_8080">8080</string>
    <string name="command_streaming">\?action=stream</string>
    <string name="command_videofeed">videofeed</string>

    <string name="settings_done">connect</string>

    <string name="title_not_connected_to_camera">Not connected to camera</string>
    <string name="title_connected_to_camera">Connected to camera</string>
    <string name="title_connecting_to_camera">Connecting to camera...</string>
    <string name="title_imageerror">Error on preparing images</string>

    <!-- Connection states status in ControllerFragment-->
    <string name="control_not_allowed_wifi">Control not available. \n Check the connection settings \n and reconnect.</string>
    <string name="control_not_allowed_bluetooth">Control not available. \n Press \"select device\" \n to connect to specific device.</string>

</resources>
